--- a/kiwify/src/index.css
+++ b/kiwify/src/index.css
@@ -16,8 +16,8 @@ body {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.6rem;
-  color: #374151;
-  background: #d2d6dc;
+  color: rgba(55, 65, 81, 1);
+  background: rgba(249, 250, 251, 1);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
